Lab 8-9-10 plus amélioration scss

--- a/sass/composantes/_modale.scss
+++ b/sass/composantes/_modale.scss
@@ -1,45 +1,125 @@
-.boite__modale{
+.boite__modale,
+.boite__carrousel {
     position: fixed;
     width: 50%;
-    height: 50%;
+    height:auto;
     top: 25%;
     left: 23%;
     border: 5px solid black;
     background-color: rgb(185, 217, 230);
     transform: scale(0);
-    transition: all 1s ease-out;
-   
-    // &--ouvrir {
-    //     transform : scale(1)
-    // }
-     
-    .boite__modale__texte{
-      
-    }
-  }
-  .ouvrir{
-    transform : scale(1)
+    transition: all 1s ease-in-out;
 
-  }
-  .ouvrir:hover{
-    animation:modale 2s infinite;
-    animation-delay: 1s;
-  }
-
-  @keyframes modale {
-    0%,
-    10% {
-        transform: scale(1);
+    &--ouvrir {
+        transform: scale(1)
     }
 
-    50% {
-        transform: scale(0.95);
-        border: 5px solid azure;
+    &__ferme {
+        position: absolute;
+        font-size: 1.5rem;
+        width: 30px;
+        height: 30px;
+        top: 10px;
+        right: 10px;
+        z-index: 1;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       background-color:  red;
     }
-    100% {
-        transform: scale(1);
+    &__ferme:hover{
+    background-color: white; 
+    }
+
+}
+
+    
+
+.boite__modale{
+    
+    top:25%;
+    left:25%;
+    &__texte
+    {
+        margin-top: 40px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 40px;
+
+        letter-spacing: 3px;
+        line-height: 2rem;
+        overflow: hidden;
+    }
+    &__titre{
+        text-align: center;
     }
 }
-.boite__modale__ferme{
-  background-color: red;
+
+
+   
+
+      
+// .boite__modale--ouvrir:hover {
+//     animation: modale 2s infinite;
+//     animation-delay: 1s;
+// }
+
+// @keyframes modale {
+
+//     0%,
+//     10% {
+//         transform: scale(1);
+//     }
+
+//     50% {
+//         transform: scale(0.95);
+//         border: 5px solid azure;
+//     }
+
+//     100% {
+//         transform: scale(1);
+//     }
+// }
+
+/* Les dimensions de la boîte carrousel */
+.boite__carrousel {
+    width : 75%;
+    height : 75%;
+    top:12.5%;
+    left:12.5%;
+    display: flex;
+    justify-content: center;
+
+    &__navigation{
+        position : absolute;
+        display : flex;
+        justify-content: center;
+        bottom: 0;
+        width : 50%;
+        border:2px solid black;
+        border-style:dotted;
+        z-index: 1199;
+        background-color:rgba(77, 77, 77, 0.486);
+        border-radius: 40%;
+
+        button{
+            width: 20px;
+            height: 20px;
+            margin : 5px 10px;
+            border-radius: 100%;
+            &:focus{
+                background-color: #000;
+            }
+        }
+    }
+
+    
+    &__img {
+        position : absolute;
+        top:0;
+        bottom: 0;
+        object-fit: cover;
+        width : 100%;
+        height: 100%;
+    }
 }
