--- a/sass/animation/_burger.scss
+++ b/sass/animation/_burger.scss
@@ -1,75 +1,61 @@
-.burger {
-    position: relative;
-    width: 3rem;
-    height: 3rem;
-    background-color: white;
+.burger{
+    margin : 5px;
+    position : absolute;
+    width : 2rem;
+    height : 2rem;
+    background-color: transparent;
+    border-radius : 25%;
+    overflow: hidden;
 
 
-    &__ligne {
-        position: absolute;
-        background-color: black;
-        width: 100%;
+    .burger__ligne{
+        position : absolute;
+        width : 100%;
         height: 100%;
-        top: 0;
-        left: 0;
-        transition: all 1s ease-in-out;
-
-
-        &:nth-of-type(1) {
-            clip-path: polygon(0 0, 100% 0, 100% 20%, 0 20%);
+        top:0;
+        left:0;
+        transition : all .25s ease-in-out;
+        background-color: rgb(249, 245, 245);
+        &:nth-of-type(1){
+            clip-path : polygon(0 0, 100% 0, 100% 20%, 0 20%);
+        }
+        &:nth-of-type(2){
+            clip-path : polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
+        }
+        &:nth-of-type(3){
+            clip-path : polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
         }
 
-        &:nth-of-type(2) {
-            clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
-
+    }
+ /*
+    &:hover{
+        .burger__ligne:nth-of-type(1){
+            clip-path : polygon(7.1% -7.1% , 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%  );
         }
-
-        &:nth-of-type(3) {
-            clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
-
+        .burger__ligne:nth-of-type(2){
+            clip-path : polygon(40% 40% , 60% 40%, 60% 60% , 40% 60%);
+        }
+        .burger__ligne:nth-of-type(3){
+            clip-path : polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
         }
     }
+*/
 
-    // &:hover {
-    //     .burger__ligne:nth-of-type(1) {
-    //         clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
-    //     }
-
-    //     .burger__ligne:nth-of-type(2) {
-    //         clip-path: polygon(40% 40%, 40% 40%, 60% 60%, 60% 60%);
-    //         opacity: 0;
-
-
-    //     }
-
-    //     .burger__ligne:nth-of-type(3) {
-    //         clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
-    //     }
-
-    // }
 }
 
-.burger__x {
-    position: relative;
-    width: 3rem;
-    height: 3rem;
-    background-color: white;
-    &__ligne{
-        &:nth-of-type(1) {
-            clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
-        }
-        &:nth-of-type(2) {
-            clip-path: polygon(40% 40%, 40% 40%, 60% 60%, 60% 60%);
-            opacity: 0;
-    
-        }
-        &:nth-of-type(3) {
-            clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 77.1% 107.1%);
-        }
+
+
+#chk-burger:checked ~ .burger .burger__ligne{
+
+    &:nth-of-type(1){
+        clip-path : polygon(7.1% -7.1% , 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%  );
     }
-   
+    &:nth-of-type(2){
+        clip-path : polygon(40% 40% , 60% 40%, 60% 60% , 40% 60%);
+    }
+    &:nth-of-type(3){
+        clip-path : polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+    }
 
-
-    
 
 }
