--- a/sass/composantes/_contenu.scss
+++ b/sass/composantes/_contenu.scss
@@ -46,11 +46,13 @@
         margin: 10px;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         background-repeat: no-repeat;
         background-position: 95% 5% ;
         
         img{
             align-self: center;
+            justify-self: start;
             margin: 0;
             padding: 0;
             
@@ -84,9 +86,18 @@
     margin: 0;
 }
 
-.cours__description {
+
+.cours__desc {
     font-size: 1rem;
+    
+    height:auto;
+}
+.cours__departement{
+    color: orangered;
+    font-weight: bold;
+    display: flex;
 }
 .cours__invisible{
     display: none;
+    
 }
