--- a/style.css
+++ b/style.css
@@ -409,6 +409,10 @@ a:hover, a:active {
 /* ---------------------------------------------------------
 COMPOSANTES
 --------------------------------------------------------- */
+.home .site__main {
+  align-items: center;
+}
+
 .site__main {
   background-color: #d5e6f1;
   border-radius: 5px;
@@ -456,6 +460,7 @@ COMPOSANTES
   margin: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   background-repeat: no-repeat;
   background-position: 95% 5%;
   width: 100%;
@@ -464,6 +469,7 @@ COMPOSANTES
 
 .formation__cours img {
   align-self: center;
+  justify-self: start;
   margin: 0;
   padding: 0;
 }
@@ -492,8 +498,15 @@ COMPOSANTES
   margin: 0;
 }
 
-.cours__description {
+.cours__desc {
   font-size: 1rem;
+  height: auto;
+}
+
+.cours__departement {
+  color: orangered;
+  font-weight: bold;
+  display: flex;
 }
 
 .cours__invisible {
@@ -991,43 +1004,104 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   transform: scale(1.2);
 }
 
-.boite__modale {
+.boite__modale,
+.boite__carrousel {
   position: fixed;
   width: 50%;
-  height: 50%;
+  height: auto;
   top: 25%;
   left: 23%;
   border: 5px solid black;
   background-color: #b9d9e6;
   transform: scale(0);
-  transition: all 1s ease-out;
+  transition: all 1s ease-in-out;
 }
 
-.ouvrir {
+.boite__modale--ouvrir,
+.boite__carrousel--ouvrir {
   transform: scale(1);
 }
 
-.ouvrir:hover {
-  animation: modale 2s infinite;
-  animation-delay: 1s;
-}
-
-@keyframes modale {
-  0%,
-  10% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(0.95);
-    border: 5px solid azure;
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.boite__modale__ferme {
+.boite__modale__ferme,
+.boite__carrousel__ferme {
+  position: absolute;
+  font-size: 1.5rem;
+  width: 30px;
+  height: 30px;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: red;
+}
+
+.boite__modale__ferme:hover,
+.boite__carrousel__ferme:hover {
+  background-color: white;
+}
+
+.boite__modale {
+  top: 25%;
+  left: 25%;
+}
+
+.boite__modale__texte {
+  margin-top: 40px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 40px;
+  letter-spacing: 3px;
+  line-height: 2rem;
+  overflow: hidden;
+}
+
+.boite__modale__titre {
+  text-align: center;
+}
+
+/* Les dimensions de la boîte carrousel */
+.boite__carrousel {
+  width: 75%;
+  height: 75%;
+  top: 12.5%;
+  left: 12.5%;
+  display: flex;
+  justify-content: center;
+}
+
+.boite__carrousel__navigation {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  bottom: 0;
+  width: 50%;
+  border: 2px solid black;
+  border-style: dotted;
+  z-index: 1199;
+  background-color: rgba(77, 77, 77, 0.486);
+  border-radius: 40%;
+}
+
+.boite__carrousel__navigation button {
+  width: 20px;
+  height: 20px;
+  margin: 5px 10px;
+  border-radius: 100%;
+}
+
+.boite__carrousel__navigation button:focus {
+  background-color: #000;
+}
+
+.boite__carrousel__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .evenement {
@@ -1055,7 +1129,6 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 }
 
 .evenement .evenement__image img {
-  max-width: 1000px;
   max-width: 500px;
 }
 
@@ -1121,6 +1194,16 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 
 .evenement .evenement__endroit h3 {
   padding-left: 5px;
+}
+
+.galerie {
+  width: 100%;
+}
+
+@media screen and (min-width: 500px) {
+  .galerie {
+    width: 75%;
+  }
 }
 
 /* ---------------------------------------------------------
@@ -1244,52 +1327,60 @@ ANIMATION
 }
 
 .burger {
-  position: relative;
-  width: 3rem;
-  height: 3rem;
-  background-color: white;
+  margin: 5px;
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  background-color: transparent;
+  border-radius: 25%;
+  overflow: hidden;
+  /*
+    &:hover{
+        .burger__ligne:nth-of-type(1){
+            clip-path : polygon(7.1% -7.1% , 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%  );
+        }
+        .burger__ligne:nth-of-type(2){
+            clip-path : polygon(40% 40% , 60% 40%, 60% 60% , 40% 60%);
+        }
+        .burger__ligne:nth-of-type(3){
+            clip-path : polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
+        }
+    }
+*/
 }
 
-.burger__ligne {
+.burger .burger__ligne {
   position: absolute;
-  background-color: black;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  transition: all 1s ease-in-out;
+  transition: all .25s ease-in-out;
+  background-color: #f9f5f5;
 }
 
-.burger__ligne:nth-of-type(1) {
+.burger .burger__ligne:nth-of-type(1) {
   clip-path: polygon(0 0, 100% 0, 100% 20%, 0 20%);
 }
 
-.burger__ligne:nth-of-type(2) {
+.burger .burger__ligne:nth-of-type(2) {
   clip-path: polygon(0 40%, 100% 40%, 100% 60%, 0 60%);
 }
 
-.burger__ligne:nth-of-type(3) {
+.burger .burger__ligne:nth-of-type(3) {
   clip-path: polygon(0 80%, 100% 80%, 100% 100%, 0 100%);
 }
 
-.burger__x {
-  position: relative;
-  width: 3rem;
-  height: 3rem;
-  background-color: white;
-}
-
-.burger__x__ligne:nth-of-type(1) {
+#chk-burger:checked ~ .burger .burger__ligne:nth-of-type(1) {
   clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
 }
 
-.burger__x__ligne:nth-of-type(2) {
-  clip-path: polygon(40% 40%, 40% 40%, 60% 60%, 60% 60%);
-  opacity: 0;
+#chk-burger:checked ~ .burger .burger__ligne:nth-of-type(2) {
+  clip-path: polygon(40% 40%, 60% 40%, 60% 60%, 40% 60%);
 }
 
-.burger__x__ligne:nth-of-type(3) {
-  clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 77.1% 107.1%);
+#chk-burger:checked ~ .burger .burger__ligne:nth-of-type(3) {
+  clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
 }
 
 /* ---------------------------------------------------------
@@ -1315,6 +1406,8 @@ LAYOUT
   grid-area: main;
   background-color: rgba(213, 230, 241, 0.5);
   padding: 10px 15px 10px 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 .site__footer {
@@ -1345,6 +1438,7 @@ LAYOUT
   clip-path: polygon(85% 0, 100% 0, 100% 100%, 52% 100%);
   background-color: #0b266a;
   z-index: -1;
+  height: 150vh;
 }
 
 @media screen and (min-width: 700px) {
