--- a/style.css
+++ b/style.css
@@ -1008,7 +1008,7 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 .boite__carrousel {
   position: fixed;
   width: 50%;
-  height: auto;
+  height: 50vh;
   top: 25%;
   left: 23%;
   border: 5px solid black;
@@ -1045,16 +1045,20 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
 .boite__modale {
   top: 25%;
   left: 25%;
+  height: auto;
 }
 
 .boite__modale__texte {
-  margin-top: 40px;
+  height: 50vh;
   margin-left: 10px;
   margin-right: 10px;
-  margin-bottom: 40px;
   letter-spacing: 3px;
   line-height: 2rem;
-  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.boite__modale__texte::-webkit-scrollbar {
+  display: none;
 }
 
 .boite__modale__titre {
