--- a/sass/composantes/_menu-accueil.scss
+++ b/sass/composantes/_menu-accueil.scss
@@ -8,9 +8,10 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         height: auto;
-        padding: 0;
+        //padding: 0;
         margin: 0;
         column-gap: 50px;
+        row-gap: 50px;
 
 
         .menu-item-description {
@@ -57,7 +58,17 @@
 
     }
 }
+@media screen and (max-width : $largeur__media--tablette){    
+    .menu-accueil_evenement-container {
+        .menu{
+          row-gap: 50px;
+          justify-content: center;
+          margin: 0;
 
+        }
+    
+    }
+}
 /* menu evenement*/
 .menu-accueil_evenement-container {
     margin-top: 20px;
@@ -69,9 +80,11 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         height: auto;
-        padding: 0;
+        //padding: 0;
         margin: 0;
         column-gap: 50px;
+        row-gap: 50px;
+        
         // .accueil__prof .menu-item-icone{
         //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
         // }
