--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*
-Theme name: 2022-4w4 ÉpreuveFinale - Zachary Arsenault
+Theme name: 2022-4w4 TP2 - Zachary Arsenault
 Author: Zachary Arsenault
-Author URI: https://github.com/TheFrenchBuck/4w4-tp1/tree/epreuvefinal
+Author URI: https://github.com/TheFrenchBuck/4w4-tp1/tree/TP2
 Description: Ce thème servira de base de développement pour l'ensemble du cours 4W4. Chacune des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
 Version: 1.0.0
 License: GNU General Public License v2 or later
