--- a/sass/composantes/_menu-accueil.scss
+++ b/sass/composantes/_menu-accueil.scss
@@ -141,5 +141,82 @@
 
 
     }
+    
+    
+}
+.menu-accueil_atelier-container{
+    
+    margin-top: 20px;
 
+    .menu {
+        //ul
+        display: flex;
+        list-style-type: none;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        height: auto;
+        //padding: 0;
+        margin: 0;
+        column-gap: 50px;
+        row-gap: 50px;
+        
+        // .accueil__prof .menu-item-icone{
+        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
+        // }
+        // .accueil__aide .menu-item-icone{
+        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
+
+
+        // }
+        // .accueil__etudiant .menu-item-icone{
+        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
+        // }
+        .menu-item-description {
+            font-size: 0.5rem;
+        }
+
+        li {
+            //element li
+            display: flex;
+            flex-direction: column;
+            padding: 5px;
+            background-color: lightgray;
+            border-radius: 10%;
+            justify-content: flex-start;
+            align-items: center;
+            text-align: center;
+            font-family: $font__navAcceuil;
+            font-size: 1em;
+            height: 10em;
+            width: 10em;
+
+
+            padding-top: 10px;
+            background-image: url(http://www.pngmart.com/files/5/Square-Frame-PNG-Photo-279x279.png);
+            background-repeat: no-repeat;
+            background-size: 10em;
+            transform: scale(1);
+            transition: all .3s ease-in-out;
+
+
+            a {
+                text-decoration: none;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-size: 1.2rem;
+
+
+            }
+
+        }
+
+        li:hover {
+
+            transform: scale(1.2);
+
+        }
+
+
+    }
+    
+    
 }
