--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,6 +45,7 @@ COMPOSANTES
 @import "composantes/modale";
 @import "composantes/evenement";
 @import "composantes/galerie";
+@import "composantes/atelier";
 
 /* ---------------------------------------------------------
 ANIMATION
