--- a/style.css
+++ b/style.css
@@ -1021,6 +1021,56 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   transform: scale(1.2);
 }
 
+.menu-accueil_atelier-container {
+  margin-top: 20px;
+}
+
+.menu-accueil_atelier-container .menu {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  height: auto;
+  margin: 0;
+  column-gap: 50px;
+  row-gap: 50px;
+}
+
+.menu-accueil_atelier-container .menu .menu-item-description {
+  font-size: 0.5rem;
+}
+
+.menu-accueil_atelier-container .menu li {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  background-color: lightgray;
+  border-radius: 10%;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1em;
+  height: 10em;
+  width: 10em;
+  padding-top: 10px;
+  background-image: url(http://www.pngmart.com/files/5/Square-Frame-PNG-Photo-279x279.png);
+  background-repeat: no-repeat;
+  background-size: 10em;
+  transform: scale(1);
+  transition: all .3s ease-in-out;
+}
+
+.menu-accueil_atelier-container .menu li a {
+  text-decoration: none;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.2rem;
+}
+
+.menu-accueil_atelier-container .menu li:hover {
+  transform: scale(1.2);
+}
+
 .boite__modale,
 .boite__carrousel {
   position: fixed;
@@ -1225,6 +1275,50 @@ Navigation pour la page category.php   boutons de catégorie  groupe-1
   .galerie {
     width: 75%;
   }
+}
+
+.atelier {
+  padding-left: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
+
+.atelier span {
+  font-weight: bold;
+}
+
+.atelier .atelier__desc {
+  display: flex;
+  flex-direction: column;
+}
+
+.atelier .atelier__desc .description {
+  margin-bottom: 20px;
+}
+
+.atelier .atelier__desc .local {
+  margin-bottom: 20px;
+}
+
+.atelier .atelier__desc .animateur {
+  margin-bottom: 20px;
+}
+
+.atelier__horaire div {
+  margin-bottom: 20px;
+}
+
+.atelier h1 {
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.atelier h3 {
+  font-size: 1.5rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* ---------------------------------------------------------
