--- a/sass/composantes/_menu-accueil.scss
+++ b/sass/composantes/_menu-accueil.scss
@@ -150,6 +150,7 @@
 
     .menu {
         //ul
+        //ul
         display: flex;
         list-style-type: none;
         flex-wrap: wrap;
@@ -159,21 +160,10 @@
         margin: 0;
         column-gap: 50px;
         row-gap: 50px;
-        
-        // .accueil__prof .menu-item-icone{
-        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=octoface");
-        // }
-        // .accueil__aide .menu-item-icone{
-        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=bug-bold");
 
-
-        // }
-        // .accueil__etudiant .menu-item-icone{
-        //     background-image: url("https://s2.svgbox.net/octicons.svg?ic=mortar-board-bold");
-        // }
+       
         .menu-item-description {
-            font-size: 0.5rem;
-        }
+            font-size: 0.85rem;        }
 
         li {
             //element li
